# prattle

./: .env.example  .gitignore  ALIASES.md  LICENSE  QUICKSTART.md  README.md  TODO.md  prattle.py  pyproject.toml  settings.json.example
src/: __init__.py  app.py  chat_file.py  commands.py  constants.py  main.py  memory.py  openrouter.py  search_ui.py  settings_ui.py  utils.py
